src/test/06-Errors/error-overload-func.txt
error-overload-func.ck:6:1: error: cannot overload function with identical arguments...
[6] fun void bar()
    ^
    |- 'void bar()' already defined elsewhere
